# convexity

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRACTS.md  DISCLAIMER.md  Dockerfile  LICENSE  Makefile  README.md  app.js  charts.js  docker-compose.yml  index.html  latest_scan.json  pyproject.toml  requirements-dev.txt  requirements.txt  styles.css
.github/: ci.yml
convexity/: __init__.py  cli.py  pipeline.py
convexity/analysis/: __init__.py  catalysts.py  competitive.py  financial_health.py  growth.py  historical_analog.py  management.py  momentum.py  news_nlp.py  ownership.py  quality.py  risk.py  technical.py  value.py
convexity/api/: __init__.py  app.py  deps.py  schemas.py  store.py
convexity/api/routes/: __init__.py  companies.py  scans.py  universe.py
convexity/core/: __init__.py  config.py  contracts.py  exceptions.py  logging.py  models.py  registry.py  scoring.py
convexity/data/: __init__.py  aggregator.py  cache.py  seed_universe.csv  universe.py
convexity/data/providers/: __init__.py  fmp.py  sec_edgar.py  yfinance_provider.py
convexity/ranking/: __init__.py  engine.py  explain.py
frontend/: api.js  index.html  sample_scan.json  styles.css
scripts/: generate_sample.py  nightly_publish.sh  publish_scan.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_pipeline_end_to_end.py
tests/unit/: __init__.py  test_active_scans.py  test_catalysts.py  test_competitive.py  test_datetime_normalization.py  test_derived_market_cap.py  test_explain.py  test_financial_health.py  test_growth.py  test_historical_analog.py  test_management.py  test_momentum.py  test_news_nlp.py  test_ownership.py  test_pipeline_cap_enforcement.py  test_pipeline_memory.py  test_provider_wiring.py  test_quality.py  test_ranking.py  test_rate_limit_protection.py  test_risk.py  test_scan_request_shape.py  test_scoring.py  test_screening_quotes.py  test_sec_form4.py  test_technical.py  test_universe_filter.py  test_universe_quotes.py  test_value.py  test_yfinance_cache.py
